completed tic-tac-toe

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     
     <div id="wrapper">
-        <p class="gameInfo">Current Player - X</p>
+        <p class="game-info"></p>
 
         <div class="tic-tac-toe">
             <div class="box box1"></div>
